--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
+  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
