--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
@@ -13,33 +13,6 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
@@ -64,7 +37,6 @@ img {vertical-align: middle;}
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -74,7 +46,7 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active {
   background-color: #717171;
 }
 
@@ -91,11 +63,14 @@ img {vertical-align: middle;}
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+  .text {font-size: 11px}
 }
 </style>
 </head>
 <body>
+
+<h2>Automatic Slideshow</h2>
+<p>Change image every 2 seconds:</p>
 
 <div class="slideshow-container">
 
@@ -107,54 +82,44 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
+  <img src="https://img.freepik.com/fotos-gratis/flor-amarela-com-um-fundo-de-flores-amarelas-fora-de-foco_1259-168.jpg?w=1380&t=st=1666055805~exp=1666056405~hmac=c97a194cbaa8a65615efee0b9740681bef80455e3a4d934103d863787fc7cd9f" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
+  <img src="https://img.freepik.com/fotos-gratis/corte-recentemente-toras-de-madeira-no-chao_1259-202.jpg?t=st=1666053743~exp=1666054343~hmac=ec34905f7d9c4175c9d06ff911487f299dd0d07a9e483cddf1474e631921226d" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
-
-<a class="prev" onclick="plusSlides(-1)">❮</a>
-<a class="next" onclick="plusSlides(1)">❯</a>
 
 </div>
 <br>
 
 <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
 </div>
 
 <script>
-let slideIndex = 1;
-showSlides(slideIndex);
+let slideIndex = 0;
+showSlides();
 
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
+function showSlides() {
   let i;
   let slides = document.getElementsByClassName("mySlides");
   let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
   for (i = 0; i < slides.length; i++) {
     slides[i].style.display = "none";  
   }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
   for (i = 0; i < dots.length; i++) {
     dots[i].className = dots[i].className.replace(" active", "");
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
 
