--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="https://img.freepik.com/fotos-gratis/praia-ao-por-do-sol-com-uma-arvore_1259-25.jpg?w=1480&t=st=1666053743~exp=1666054343~hmac=a9ef25d5261b3ffe56613c42eb01f20fe72bb2282ceef7d7c4c39003853dfbd7" style="width:100%">
+  <img src="https://www.ifms.edu.br/noticias/elaine-cassiano-e-nomeada-reitora-pelos-proximos-quatro-anos/mat-ifms-2.png/@@images/7acee117-654c-4f0b-8bf3-9be6c7785bbc.png" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
