--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="30">
+<meta http-equiv="refresh" content="5000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
@@ -81,7 +81,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://img.freepik.com/fotos-gratis/flor-amarela-com-um-fundo-de-flores-amarelas-fora-de-foco_1259-168.jpg?w=1380&t=st=1666055805~exp=1666056405~hmac=c97a194cbaa8a65615efee0b9740681bef80455e3a4d934103d863787fc7cd9f" style="width:100%">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftenor.com%2Fview%2Fdeyverson-deyvershow-libertadores-final-palmeiras-gif-23943365&psig=AOvVaw3q2OnwoGgMFHlpLSOJrKSd&ust=1666143918842000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCIDJnffT6PoCFQAAAAAdAAAAABAD" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
