--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftenor.com%2Fview%2Fdeyverson-deyvershow-libertadores-final-palmeiras-gif-23943365&psig=AOvVaw3q2OnwoGgMFHlpLSOJrKSd&ust=1666143918842000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCIDJnffT6PoCFQAAAAAdAAAAABAD" style="width:100%">
+  <img src="https://c.tenor.com/eGUyWt5L1qIAAAAC/deyverson-palmeiras.gif" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
