--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="https://img.freepik.com/fotos-gratis/corte-recentemente-toras-de-madeira-no-chao_1259-202.jpg?t=st=1666053743~exp=1666054343~hmac=ec34905f7d9c4175c9d06ff911487f299dd0d07a9e483cddf1474e631921226d" style="width:100%">
+  <img src="https://i.pinimg.com/originals/74/d6/90/74d690ba5ca73e08abf80da25b6202ab.gif" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
