--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://c.tenor.com/eGUyWt5L1qIAAAAC/deyverson-palmeiras.gif" style="width:100%">
+  <img src="https://jornaldanova.com.br/userfiles/imagens/materias/large/b_12072021_171820498513833_1.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="https://i.pinimg.com/originals/74/d6/90/74d690ba5ca73e08abf80da25b6202ab.gif" style="width:100%">
+  <img src="https://jornaldanova.com.br/userfiles/imagens/materias/large/b_12072021_171820498513833_1.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
