--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="https://www.ifms.edu.br/noticias/elaine-cassiano-e-nomeada-reitora-pelos-proximos-quatro-anos/mat-ifms-2.png/@@images/7acee117-654c-4f0b-8bf3-9be6c7785bbc.png" style="width:100%">
+  <img src="https://github.com/Brunadias15/testeTv/blob/main/19Sept.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="https://jornaldanova.com.br/userfiles/imagens/materias/large/b_12072021_171820498513833_1.jpg" style="width:100%">
+  <img src="https://github.com/Brunadias15/testeTv/blob/main/19Sept.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="https://jornaldanova.com.br/userfiles/imagens/materias/large/b_12072021_171820498513833_1.jpg" style="width:100%">
+  <img src="https://github.com/Brunadias15/testeTv/blob/main/19Sept.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
